--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src --ext .ts",
     "generate": "prisma generate",
     "db:migrate": "prisma migrate dev --name init",
-    "db:seed": "tsx prisma/seed.ts"
+  "db:seed": "tsx prisma/seed.ts",
+  "test:jest": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.587.0",
@@ -19,8 +20,8 @@
     "@elastic/elasticsearch": "^8.13.0",
     "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^9.0.1",
-    "@fastify/helmet": "^13.0.1",
-    "@fastify/rate-limit": "^10.1.1",
+  "@fastify/helmet": "^11.1.1",
+  "@fastify/rate-limit": "^7.6.0",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.14.0",
@@ -39,10 +40,13 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+  "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "eslint": "^8.57.1",
     "prisma": "^5.14.0",
+  "jest": "^29.7.0",
+  "ts-jest": "^29.2.5",
     "tsx": "^4.7.1",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
