--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
   "outDir": "dist",
   "rootDir": ".",
-  "types": ["node"]
+  "types": ["node"],
+  "moduleResolution": "Node"
   },
   "include": ["src", "prisma/seed.ts"]
 }
