--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "pnpm": "^9.0.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "wait-on": "^8.0.4"
